src/_includes/scss/_examples.scss
.example {

  &__set {
    padding-left: 1.55rem;
    margin: 1em 0;

    & + & {
      margin-top: 1.5em;
    }
  }

  p + & {
    margin-top: 0.5em;
  }

  svg {
    display: inline-block;
    height: auto;
    width: 1.25rem;
    vertical-align: top;
    margin-left: -1.7rem;
    margin-top: -0.05rem;
    margin-right: 0.25rem;
  }

  path {
    fill: #EDCE20;
    fill: mix($lego-red, $color-light, 25%);
  }

  circle {
    fill: $lego-red;
  }

  &__example {
    margin: 0 0 0.5em;

    &--good {
      font-weight: 600;

      path {
        fill: mix(#347813, $color-light, 25%);
      }

      circle {
        fill: #347813;
      }
    }
  }


  @media screen and (min-width: 48em) {
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-gap: 2rem;

    > svg {
      margin-left: 0;
    }
  }
}

